syntax = "proto3";

package ai.metathings.service.identityd2;

import "model.proto";

message ListCredentialsRequest {
	OpCredential credential = 1;
}

message ListCredentialsResponse {
	repeated Credential credentials = 1;
}
